--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <br>
     <button class="input-button"type="submit" >Login</button>
   </form>
+  <p style="text-align:center">password:12345</p>
     
   </div>
   <ng-template #inside>
