--- a/src/app/show-info2/show-info2.component.html
+++ b/src/app/show-info2/show-info2.component.html
@@ -1,5 +1,6 @@
 <div class="info-page">
   <h1 style ="display:inline; margin:5px">Search for Compensation</h1>
+  <p>have to add compensation first</p>
   <form class="formm"(change)="submit($event)" >
     <input class="input-form"type="text" />
     <button class="input-button"type="submit" >search</button>
